Fix commit messages not aligning vertically with nodes

--- a/src/app/shared/version_control_graph/commit.component.css
+++ b/src/app/shared/version_control_graph/commit.component.css
@@ -1,10 +1,12 @@
 :host {
   position: relative;
   display: block;
-  box-sizing: border-box;
+  box-sizing: content-box;
   width: 100%;
 }
 
 #message {
   margin: 0;
+
+  overflow: hidden;
 }
